dashboard/istio-config.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  servers:
    - hosts:
        - dashboard.example.com
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - dashboard.example.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: kubernetes-dashboard-tls
        mode: SIMPLE
  selector:
    app: istio-ingressgateway
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  hosts:
    - dashboard.example.com
  http:
    - route:
        - destination:
            host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
  gateways:
    - kubernetes-dashboard
